@@ -114,9 +114,9 @@ if($_POST['action']!="add") {
 	    <td><?php print _('Widget size'); ?></td>
 	    <td>
 	    	<select name="wsize" class="form-control input-sm input-w-auto">
-	    		<option value="4"  <?php if(@$w['wsize']=='4')  print "selected='selected'"; ?>>25%</option>
+	    		<option value="4"  <?php if(@$w['wsize']=='4')  print "selected='selected'"; ?>>33%</option>
 	    		<option value="6"  <?php if(@$w['wsize']=='6')  print "selected='selected'"; ?>>50%</option>
-	    		<option value="8"  <?php if(@$w['wsize']=='8')  print "selected='selected'"; ?>>75%</option>
+	    		<option value="8"  <?php if(@$w['wsize']=='8')  print "selected='selected'"; ?>>66%</option>
 	    		<option value="12" <?php if(@$w['wsize']=='12') print "selected='selected'"; ?>>100%</option>
 	    	</select>
 	    </td>
