@@ -39,7 +39,7 @@ $widgets = (array) $widgets;
 			print "<li id='$k'>";
 			print "	<a href='' class='btn btn-xs fa-marg-right  btn-default btn-success widget-add' id='w-$wtmp[wfile]' data-size='$wtmp[wsize]' data-htitle='$wtmp[wtitle]'><i class='fa fa-plus'></i></a>"._($wtmp['wtitle']);
 			print "	<div class='muted' style='margin-left:27px;'>"._($wtmp['wdescription'])."</div>";
-			print "</li>";
+			print "</li>\n";
 			$m++;
 		}
 	}
