@@ -14,6 +14,7 @@
     + Fixed Force mac address update during status update scan (#3791);
     + Fixed RADIUS authentication fails on 1.6.0 (#3986);
     + Fixed cannot add NAT issue (#3993);
+    + Fixed Dashboard widget widths are not correct percentage (#4176);
 
     Enhancements, changes:
     ----------------------------
@@ -21,6 +22,7 @@
     + Added option to export data for VLAN,VRF and Devices directly from tools page;
     + Added option to disable OpenStreetMap address geoip lookups;
     + Added $api_stringify_results config.php option for <PHP81 API backwards compatibility;
+    + Added support for newly added widgets to be sortable with jQuery (#4711);
 
     Security Fixes:
     ----------------------------
